blog header spacing fixes

--- a/src/styles/blog/BlogLanding.css
+++ b/src/styles/blog/BlogLanding.css
@@ -22,7 +22,7 @@
     align-items: center;
     justify-content: center;
     gap: 1.2rem;
-    padding: 70px 0px; ;
+    margin-bottom: 40px;
 }
 .blog-landing-header img{
     width: max-content;
@@ -276,9 +276,6 @@
     }
     .blog-landing-content{
         gap:2rem;
-    }
-    .blog-landing-header{
-        padding: 30px 0px;
     }
     .blog-landing-header img{
         width: max-content;
